rearrange the code

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-/build/
+.idea/
+build/
+nbproject/
+res/
+.settings/
+build.gradle
+pom.xml~
+nbactions.xml
+*.project~
+*.gradle
+.project
+.classpath
+.springBeans
+/**/*.iml
+/**/.classpath
+/**/.project
+/**/.settings
+*.*~
+*.log
+*.rar
+.gitignore~
+/**/perceptron.script
+/**/perceptron.lck
+
+
+
