- refactor package - adding push

--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,8 +1,8 @@
 #
-#Sun Nov 08 15:24:33 IST 2015
+#Wed Nov 18 07:57:15 IST 2015
+codename1.arg.java.version=8
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
-codename1.arg.java.version=8
 codename1.arg.rim.obfuscation=false
 codename1.arg.ios.newStorageLocation=true
 codename1.j2me.nativeTheme=nbproject/nativej2me.res
@@ -13,8 +13,8 @@ codename1.android.keystoreAlias=
 codename1.ios.release.certificate=
 codename1.android.keystorePassword=
 codename1.ios.provision=
-codename1.arg.ios.dsym=false
 codename1.arg.android.release=true
+codename1.arg.ios.dsym=false
 codename1.arg.ios.statusbar_hidden=false
 codename1.languageLevel=5
 codename1.android.keystore=
@@ -39,5 +39,5 @@ codename1.rim.signtoolCsk=
 codename1.arg.android.debug=false
 codename1.rim.signtoolDb=
 codename1.arg.ios.testFlight=false
-codename1.packageName=com.mycompany.myapp
 codename1.arg.ios.includePush=false
+codename1.packageName=il.co.ashdod10.app
