--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Wed Nov 18 07:57:15 IST 2015
+#Sat Nov 21 18:17:28 IST 2015
 codename1.arg.java.version=8
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
@@ -22,7 +22,7 @@ codename1.vendor=CodenameOne
 codename1.arg.win.ver=8
 codename1.ios.certificatePassword=
 codename1.ios.debug.certificatePassword=
-codename1.mainName=MyApplication
+codename1.mainName=Ashdod10
 codename1.ios.release.certificatePassword=
 codename1.arg.ios.prerendered_icon=false
 codename1.ios.debug.certificate=
@@ -40,4 +40,4 @@ codename1.arg.android.debug=false
 codename1.rim.signtoolDb=
 codename1.arg.ios.testFlight=false
 codename1.arg.ios.includePush=false
-codename1.packageName=il.co.ashdod10.app
+codename1.packageName=il.co.ashdod10
